crates/config/tests/snapshots/block_string_gen_folded_keep_simple_dedent.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-gen-folded-keep-simple-dedent

## Input

```mical
key >+
  a
  b
end marker

```

## JSON

```json
{
  "key": "a b\n",
  "end": "marker"
}
```

vim:ft=markdown
