crates/config/tests/snapshots/block_string_gen_folded_keep_simple_eof.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-gen-folded-keep-simple-eof

## Input

```mical
key >+
  a
  b

```

## JSON

```json
{
  "key": "a b\n"
}
```

vim:ft=markdown
