crates/config/tests/snapshots/block_string_gen_folded_keep_trailing_empty_dedent.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-gen-folded-keep-trailing-empty-dedent

## Input

```mical
key >+
  a


end marker

```

## JSON

```json
{
  "key": "a\n\n\n",
  "end": "marker"
}
```

vim:ft=markdown
