crates/config/tests/snapshots/block_string_gen_folded_keep_wsln_dedent.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-gen-folded-keep-wsln-dedent

## Input

```mical
key >+
  a
    
  b
end marker

```

## JSON

```json
{
  "key": "a\nb\n",
  "end": "marker"
}
```

vim:ft=markdown
