crates/config/tests/snapshots/block_string_gen_folded_strip_emptyln_dedent.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-gen-folded-strip-emptyln-dedent

## Input

```mical
key >-
  a

  b
end marker

```

## JSON

```json
{
  "key": "a\nb",
  "end": "marker"
}
```

vim:ft=markdown
