crates/config/tests/snapshots/block_string_gen_folded_strip_extra_indent_dedent.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-gen-folded-strip-extra-indent-dedent

## Input

```mical
key >-
  a
    b
  c
end marker

```

## JSON

```json
{
  "key": "a\n  b\nc",
  "end": "marker"
}
```

vim:ft=markdown
